# tupsar

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: image_size.ipynb
scripts/: find_missing.py  html2md.sh  html2md.template  parquet.py
src/baru/: __init__.py  cli.py
src/baru/batch/: __init__.py  chunk.py
src/baru/embedding/: __init__.py  merge.py  submit.py
src/baru/evaluation/: __init__.py  diff.py
src/tupsar/: __init__.py
src/tupsar/cli/: __init__.py  cli.py
src/tupsar/extractor/: __init__.py  azure.py  base.py  cost.py  extractor.py  gemini.py  langchain.py  parser.py  pipeline.py
src/tupsar/file/: __init__.py  image.py  mime.py  path.py  pdf.py
src/tupsar/model/: __init__.py  article.py  page.py
