[project]
name = "tupsar"
version = "0.1.0"
description = "Digitise newspaper scans to articles"
readme = "README.md"
authors = [
    { name = "Timothy Langer", email = "zeevox.dev@gamil.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncstdlib>=3.13.0",
    "beautifulsoup4>=4.13.3",
    "google-generativeai>=0.8.4",
    "langchain-anthropic>=0.3.9",
    "langchain-core>=0.3.41",
    "langchain-google-genai>=2.0.10",
    "lxml>=5.3.1",
    "pillow>=11.1.0",
    "polars>=1.24.0",
    "pyright>=1.1.396",
    "python-dotenv>=1.0.1",
    "python-frontmatter>=1.1.0",
    "rapidfuzz>=3.12.2",
    "redlines>=0.5.1",
    "rich>=13.9.4",
    "rich-argparse>=1.7.0",
    "scikit-image>=0.25.2",
    "unidecode>=1.3.8",
]

[project.scripts]
tupsar = "tupsar:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "natsort>=8.4.0",
    "notebook>=7.4.0b0",
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "ruff>=0.9.9",
    "seaborn>=0.13.2",
    "types-beautifulsoup4>=4.12.0.20250204",
]

[tool.uv]
prerelease = "allow"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
exclude = ["*.ipynb"]

# Enable all the rules
select = ["ALL"]
fixable = ["ALL"]

ignore = [
    # Disable pydoclint rules, since they do not support Sphinx docstrings
    # see https://github.com/astral-sh/ruff/issues/12434
    "DOC",
    # Disable copyright header check
    "CPY",
    "D203", # prefer D211
    "D212", # prefer D213
    "COM812", # unnecessary rule
    "D100", # I don't need doc comments
    "EXE003" # use uv for scripts instead of python shebang
]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = ["src/tupsar/model", "src/tupsar/cli"]

[tool.mypy]
# Avoid type-checking untyped libraries
ignore_missing_imports = true
# Use strict mode
strict = true
