[project]
name = "tupsar"
version = "0.1.0"
description = "Digitise newspaper scans to articles"
readme = "README.md"
authors = [
    { name = "Timothy Langer", email = "zeevox.dev@gamil.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncstdlib>=3.13.1",
    "beautifulsoup4>=4.13.3",
    "click>=8.1.8",
    "diff-match-patch>=20241021",
    "langchain-anthropic>=0.3.10",
    "langchain-core>=0.3.49",
    "langchain-google-genai>=2.1.2",
    "langchain-openai>=0.3.11",
    "lxml>=5.3.1",
    "pillow>=11.1.0",
    "polars>=1.26.0",
    "pypandoc>=1.15",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
    "rapidfuzz>=3.12.2",
    "rich>=13.9.4",
    "rich-argparse>=1.7.0",
    "rich-click>=1.8.8",
    "scikit-image>=0.25.2",
    "unidecode>=1.3.8",
]

[project.scripts]
tupsar = "tupsar:cli"
baru = "baru:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "natsort>=8.4.0",
    "notebook>=7.4.0b3",
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "ruff>=0.11.2",
    "seaborn>=0.13.2",
    "types-beautifulsoup4>=4.12.0.20250204",
]

[tool.uv]
reinstall-package = ["tupsar", "baru"]
prerelease = "allow"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
exclude = ["*.ipynb"]

# Enable all the rules
select = ["ALL"]
fixable = ["ALL"]

ignore = [
    # Disable pydoclint rules, since they do not support Sphinx docstrings
    # see https://github.com/astral-sh/ruff/issues/12434
    "DOC",
    # Disable copyright header check
    "CPY",
    "D203", # prefer D211
    "D212", # prefer D213
    "COM812", # unnecessary rule
    "D100", # I don't need doc comments
    "EXE003" # use uv for scripts instead of python shebang
]

[tool.pyright]
venvPath = "."
venv = ".venv"
