[project]
name = "tupsar"
version = "0.1.0"
description = "Digitise newspaper scans to articles"
readme = "README.md"
authors = [
    { name = "Timothy Langer", email = "zeevox.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncstdlib>=3.13.1",
    "babel>=2.17.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "diff-match-patch>=20241021",
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "lxml>=5.4.0",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "polars>=1.31.0b1",
    "pypandoc>=1.15",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.13.0",
    "rich>=14.0.0",
    "rich-argparse>=1.7.1",
    "rich-click>=1.8.9",
    "scikit-image>=0.25.2",
    "unidecode>=1.4.0",
]

[project.scripts]
tupsar = "tupsar:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "ruff>=0.11.13",
    "types-beautifulsoup4>=4.12.0.20250516",
]

[tool.uv]
reinstall-package = ["tupsar"]
prerelease = "allow"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
exclude = ["*.ipynb"]

# Enable all the rules
select = ["ALL"]
fixable = ["ALL"]

ignore = [
    # Disable pydoclint rules, since they do not support Sphinx docstrings
    # see https://github.com/astral-sh/ruff/issues/12434
    "DOC",
    # Disable copyright header check
    "CPY",
    "D203", # prefer D211
    "D212", # prefer D213
    "COM812", # unnecessary rule
    "D100", # I don't need doc comments
    "EXE003", # use uv for scripts instead of python shebang
    "PLC0415", # okay to import outside top-level to defer a costly module load
]

[tool.pyright]
venvPath = "."
venv = ".venv"
